broken layout revisions (advanced search, etc.) ref https://github.com/mozilla/kitsune/issues/3669

--- a/kitsune/sumo/static/sumo/less/questions.less
+++ b/kitsune/sumo/static/sumo/less/questions.less
@@ -1007,7 +1007,7 @@ h2 {
 }
 
 #aaq_progress {
-  margin: 0 78px;
+  margin: 0 78px 60px;
 
   .legend {
     display: flex;
@@ -1080,9 +1080,9 @@ h2 {
 
   .searchbox {
     float: left;
-    font-size: 24px;
-    height: 36px;
-    margin: 0 0 0 12px;
+    font-size: 16px;
+    height: 42px;
+    margin: 0 10px 0 12px;
     padding: 4px 20px 8px 20px;
     padding-bottom: 8px;
     padding-top: 4px;
